# RuntimeOPs

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  auto_fix.py  docker-compose.prod.yml  fix_remaining.py  flake8_output.txt  pyproject.toml  readme.md
.github/workflows/: ci-cd.yml  ci.yml  test.yml
bob/tests/validation/: test_vs01_incident_response.py  test_vs02_change_impact.py  test_vs03_code_discovery.py  test_vs04_architecture_mapping.py  test_vs05_test_selection.py
config/: alerts.yml  grafana-dashboard.json
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  grafana-datasources.yml  init-db.sql  prometheus.yml  security-schema.sql
docs/: agent-integration-guide.md
docs/api/: grpc_api.md  rest-api.md  rest_api.md
docs/architecture/: overview.md  system_overview.md
docs/deployment/: docker.md  kubernetes.md
docs/getting-started/: installation.md  quick-start.md
docs/operations/: performance-tuning.md  troubleshooting.md
docs/runbooks/: troubleshooting.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
scripts/: compile_protos.py  setup_dev.sh  verify_k8s.sh
src/bob/: config.py  exceptions.py  main.py
src/bob/api/: bob_pb2.pyi  grpc_server.py  models.py  rest.py
src/bob/api/protos/: bob.proto
src/bob/graph/: models.py  query.py  writer.py
src/bob/ingestion/: analyzer.py  convention_extractor.py  fetcher.py  orchestrator.py
src/bob/observability/: config.py  health.py  logging.py  metrics.py  middleware.py  performance.py  tracing.py
src/bob/parsers/: base.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py  typescript_parser.py
src/bob/query/: assembler.py  gateway.py  router.py
src/bob/security/: __init__.py  audit.py  auth.py  middleware.py  rate_limiter.py  rbac.py  secrets.py  validation.py
src/bob/semantic/: embedder.py  vector_store.py
src/bob/storage/: cache.py  registry.py
src/bob/tools/: __init__.py  bob_tools.py  client.py  event_bus.py  langgraph_integration.py  models.py
src/bob/utils/: circuit_breaker.py
tests/: README.md  conftest.py
tests/chaos/: test_resilience.py
tests/e2e/: test_e2e_workflows.py
tests/integration/: test_agent_integration.py  test_databases.py  test_endpoints.py  test_grpc_server.py  test_observability_integration.py  test_security_integration.py
tests/load/: locustfile.py
tests/performance/: test_performance.py
tests/security/: test_security_comprehensive.py  test_security_vulnerabilities.py
tests/unit/: test_api.py  test_graph.py  test_ingestion.py  test_observability.py  test_parsers.py  test_security.py  test_storage.py  test_tools.py
tests/validation/: test_validation_scenarios.py
