[tool.poetry]
name = "bob"
version = "1.0.0"
description = "IBM Bob - Repository Intelligence Agent for RuntimeOps"
authors = ["RuntimeOps Engineering <engineering@runtimeops.dev>"]
readme = "README.md"
license = "Proprietary"
packages = [{include = "bob", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# API Framework
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database Clients
neo4j = "^5.14.0"
weaviate-client = "^4.4.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
redis = {extras = ["hiredis"], version = "^5.0.0"}

# Git & Repository
GitPython = "^3.1.40"
pygithub = "^2.1.1"

# Parsing & Analysis
tree-sitter = ">=0.20.4"
tree-sitter-python = ">=0.21.0"
tree-sitter-javascript = ">=0.21.0"
tree-sitter-typescript = ">=0.21.0"
tree-sitter-go = ">=0.21.0"
tree-sitter-java = ">=0.21.0"
networkx = "^3.2.1"

# LLM & Embeddings
openai = "^1.3.0"
google-generativeai = "^0.3.0"

# Security & Encryption
cryptography = "^41.0.7"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.0"

# Observability
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-grpc = "^0.42b0"
opentelemetry-exporter-otlp = "^1.21.0"
prometheus-client = "^0.19.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
tenacity = "^8.2.3"
structlog = "^23.2.0"
setuptools = ">=68.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
locust = "^2.18.0"
testcontainers = "^3.7.1"
faker = "^20.1.0"

# Code Quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
bandit = "^1.7.5"

# Pre-commit
pre-commit = "^3.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=bob",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
    "e2e: End-to-end workflow tests",
    "performance: Performance tests",
    "security: Security tests",
    "chaos: Chaos engineering tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["bob"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]